--- a/Sepp/Base.lproj/MainMenu.xib
+++ b/Sepp/Base.lproj/MainMenu.xib
@@ -176,6 +176,9 @@
                             <color key="textColor" name="selectedMenuItemColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
+                        <connections>
+                            <action selector="onOpenGithubLinkClicked:" target="Voe-Tx-rLC" id="2hX-ik-4tt"/>
+                        </connections>
                     </textField>
                 </subviews>
                 <animations/>
